--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Quack Quack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/OojAmit/quackchat#readme",
   "dependencies": {
     "express": "^4.16.2"
+  },
+  "engines": {
+    "node": "9.1.0"
   }
 }
