--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/OojAmit/quackchat#readme",
   "dependencies": {
     "ejs": "^2.5.7",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
   },
   "engines": {
     "node": "9.1.0"
