--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/OojAmit/quackchat#readme",
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "mongoose": "^5.0.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
   },
