--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.16.2",
     "mongoose": "^5.0.1",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "socket.io": "^2.0.4"
   },
   "engines": {
     "node": "9.1.0"
